@@ -1,3 +1,9 @@
+2010-12-13  Romain Francois <romain@r-enthusiasts.com>
+
+    * inst/include/Rcpp/vector/string_proxy.h: List::Proxy did not convert
+    bool correctly, reported on Rcpp-devel by 
+    Daniel Sabanés Bové <daniel.sabanesbove@ifspm.uzh.ch>
+
 2010-12-12  Romain Francois <romain@r-enthusiasts.com>
 
     * R/SHLIB.R: new unexported R function SHLIB, small wrapper around 
